qgvdial (__QGVDIAL_VERSION__) unstable; urgency=low

  * Fix a lot of QML issues

 -- Yuvraaj <yuvraaj@gmail.com>  __CHANGELOG_DATETIME__ -0700